--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   mongo:
-    image: mongo:5.0
+    image: mongo:4.4.11-rc0
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
@@ -21,21 +21,3 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
     depends_on:
       - "mongo"
-
-  neo4j:
-    image: neo4j:3.5.3
-    volumes:
-      - /databases/neo4j:/data
-    ports:
-      - 7474:7474
-      - 7687:7687
-
-  mssql: 
-    image: mcr.microsoft.com/mssql/server
-    environment:
-      SA_PASSWORD: "1234myFancyPasswort"
-      ACCEPT_EULA: "Y"
-    ports:
-      - 1433:1433
-      - 1431:1431
-      - 1434:1434
