added neo4j abstract methods && env configs && fixed mongoauth

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-NEO4J_URL="localhost:7474"
-NEO4J_USER=""
-NEO4J_PASSWORD=""
+NEO4J_URL="neo4j://localhost:7474"
+NEO4J_USER="neo4j"
+NEO4J_PASSWORD="changeme"
 
-MONGO_URL="localhost:27017/test_mondodb"
+MONGO_URL="mongodb://localhost:27017/test_mondodb"
 MONGO_USER="root"
 MONGO_PASSWORD="changeme"
 
-MSSQL_URL="localhost:1433?database=master"
+MSSQL_URL="mssql://localhost:1433?database=master"
 MSSQL_USER="sa"
 MSSQL_PASSWORD="changeMe1234"
