added abstract save for mssql

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ MONGO_URL="mongodb://localhost:27017/test_mondodb"
 MONGO_USER="root"
 MONGO_PASSWORD="changeme"
 
-MSSQL_URL="mssql://localhost:1433?database=master"
+MSSQL_URL="sqlserver://localhost:1433?database=master"
 MSSQL_USER="sa"
 MSSQL_PASSWORD="changeMe1234"
