--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}\\cmd\\generator"
+            "program": "${workspaceFolder}/cmd/importer_neo4j/main.go",
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
