--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ NEO4J_URL="neo4j://localhost:7687"
 NEO4J_USER="neo4j"
 NEO4J_PASSWORD="changeme"
 
-MONGO_URL="mongodb://localhost:27017/test_mondodb"
+MONGO_URL="mongodb://127.0.0.1"
 MONGO_USER="root"
-MONGO_PASSWORD="changeme"
+MONGO_PASSWORD="example"
 
 MSSQL_URL="sqlserver://localhost:1433?database=master"
 MSSQL_USER="sa"
