--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: changeme
+      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
 
@@ -17,8 +17,8 @@ services:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: changeme
-      ME_CONFIG_MONGODB_URL: mongodb://root:changeme@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
     depends_on:
       - "mongo"
 
