--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
             "cwd": "${workspaceFolder}"
         },
         {
+            "name": "MSSQL importer run in Debug-Mode",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/importer_mssql/main.go",
+            "cwd": "${workspaceFolder}"
+        },
+        {
             "name": "mongo importer run in Debug-Mode",
             "type": "go",
             "request": "launch",
