--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "neo4j importer run in Debug-Mode",
             "type": "go",
@@ -18,6 +19,14 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/importer_mssql/main.go",
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "MSSQL find run in Debug-Mode",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/find_mssql/main.go",
             "cwd": "${workspaceFolder}"
         },
         {
