--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     image: neo4j:3.5.3
     volumes:
       - /databases/neo4j:/data
+    environment:
+      - NEO4J_dbms_transaction_timeout=5m
     ports:
       - 7474:7474
       - 7687:7687
