--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/find_mssql/main.go",
+            "program": "${workspaceFolder}/cmd/find_mssql/main.go", 
             "cwd": "${workspaceFolder}"
         },
         {
@@ -42,7 +42,17 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
+            "args": ["6081", "2018-12-11", "2022-12-15"],
             "program": "${workspaceFolder}/cmd/find_mongo/main.go",
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "mongo find optimized run in Debug-Mode",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "args": ["6081", "2018-12-11", "2022-12-15"],
+            "program": "${workspaceFolder}/cmd/find_mongo_optimized/main.go",
             "cwd": "${workspaceFolder}"
         }
     ]
