--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -26,8 +26,13 @@ services:
     image: neo4j:3.5.3
     volumes:
       - neo4j:/data
+      - neo4j:/plugins
     environment:
       - NEO4J_dbms_transaction_timeout=300
+      - NEO4J_apoc_export_file_enabled=true
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_apoc_import_file_use__neo4j__config=true
+      - NEO4JLABS_PLUGINS=\[\"apoc\"\]
     ports:
       - 7474:7474
       - 7687:7687
