--- a/deployments/development/docker-compose.yml
+++ b/deployments/development/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: neo4j:3.5.3
     volumes:
       - neo4j:/data
-      - neo4j:/plugins
+      - plugins:/plugins
     environment:
       - NEO4J_dbms_transaction_timeout=300
       - NEO4J_apoc_export_file_enabled=true
@@ -49,3 +49,4 @@ services:
 
 volumes:
   neo4j:
+  plugins:
